--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body { margin: 0; padding: 0; background-color: #e9e9e9; }
 
 * { list-style: none; text-decoration: none; }
 
+@keyframes spin { from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); } }
 html { margin: 0; padding: 0; background-image: url("../img/bg.jpg"); background-repeat: no-repeat; background-size: cover; background-position: top; }
 
 #bg_cert img { animation-name: spin; animation-duration: 75000ms; animation-iteration-count: infinite; animation-timing-function: linear; z-index: 100; }
