--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,15 @@
 
 $white: #fff;
 
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
 html {
 	margin: 0; padding: 0;
 	background-image: url("../img/bg.jpg");
