--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,8 +1,15 @@
 body {
-	margin: 0; padding: 0;
-	background-color: #e9e9e9;
+    margin: 0;
+    padding: 0;
+    background-color: #e9e9e9;
+}
+
+html {
+    margin: 0;
+    padding: 0;
 }
 
 * {
-	list-style: none; text-decoration: none;
+    list-style: none;
+    text-decoration: none;
 }
