--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ html { margin: 0; padding: 0; }
 #bg_cert img { animation-name: spin; animation-duration: 75000ms; animation-iteration-count: infinite; animation-timing-function: linear; z-index: 100; }
 
 #bg_cert { width: 1000px; height: 600px; padding: 10%; position: relative; background-image: url("../img/bg.jpg"); background-repeat: no-repeat; background-size: cover; background-position: top; }
-#bg_cert img { width: 350px; float: left; margin-right: 25%; }
-#bg_cert h1 { color: #fff; font-size: 30px; text-align: center; float: left; text-shadow: 5px 3px #a0a0a0; }
+#bg_cert img { width: 350px; float: left; margin-right: 25%; margin-right: 15%; position: absolute; top: 5%; left: 6%; }
+#bg_cert h1 { width: 65%; color: #fff; background-color: rgba(0, 0, 0, 0.5); font-size: 100px; text-align: center; font-family: 'PT Sans Narrow', sans-serif; float: left; position: absolute; margin-left: 18%; text-transform: uppercase; top: 4%; }
 #bg_cert h2 { color: #fff; }
 #bg_cert h3 { color: #fff; }
 #bg_cert .block-first, #bg_cert .block-second { position: absolute; height: 100%; right: 0; top: 0; width: 25%; }
